--- a/styles.css
+++ b/styles.css
@@ -68,34 +68,63 @@ body {
 .right_pannel{
   display:inline-block;
   margin-top: 0px;
-
-  /*background: red;*/
   width: 370px;
   height: 600px;
   border: 2px solid #000000;
   border-radius: 5px;
   overflow: hidden;
+  font-size: 13px;
+  
 }
 .right_pannel h1{
   text-align: center;
+  margin-bottom: 5px;
+  padding-bottom: 20px;
+  padding-top: 10px;
 }
-.right_pannel .Select{
-  width: 50px;
-  height: 50px;
-}
-.right_pannel .Edge{
-  width: 150px;
-  height: 50px;
-  margin-right: 30px;
+.right_pannel p{
   margin-left: 5px;
+  margin-right: 5px;
+  padding-bottom: 15px;
 }
-.right_pannel #bolder{
+.right_pannel .bolder{
   font-weight: bold;
 }
 .results{
   display: inline-block;
   width: 50px;
 }
+
+#Extra_instructions{
+  display:inline-block;
+  margin-top: 10px;
+  text-align: justify;
+
+  width: 100%;
+  border: solid black 2px;
+  background-color: lightgray;
+  border-radius: 5px;
+  /* overflow: hidden; */
+  font-size: 13px;
+}
+
+#Extra_instructions p{
+  margin-left:5px;
+  margin-right: 5px;
+  padding-bottom: 15px;
+}
+
+#Extra_instructions h1{
+  text-align: center;
+  margin-bottom: 15px;
+  margin-top: 10px;
+}
+
+#Extra_instructions p .bolder{
+  font-weight: bold;
+}
+
+
 
 p img {
   vertical-align: middle;
@@ -129,7 +158,7 @@ p img {
   flex-grow: 1; /* Makes the right_pannel div grow to fill available space */
   background-color: lightgray;  /* Optional: Background color for visual */
   word-break: keep-all;
-  text-align: center;
+  text-align: justify;
   margin-top: 15px;
 }
 .right_pannel h1{
@@ -158,7 +187,7 @@ p img {
 .right_pannel {
   width: 50%;  /* Takes full width of content */
   height:650px;  /* Matches the height of #frame-parent */
-  text-align: center;  /* Center the right_pannel text */
+  text-align: justify;  /* Center the right_pannel text */
   background-color: lightgray;  /* Optional background to see the div */
 }
 
